objects/CN_Case_SAP_Batch__c.object
<CustomObject>
    <fields>
        <fullName>CN_Case_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaint Product Details</relationshipLabel>
        <relationshipName>CaseSapBatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Return_Good_Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                    <label>kg</label>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint Product Detail</label>
    <nameField>
        <label>SAP Batch Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Product Details</pluralLabel>
    <recordTypes>
        <fullName>CN_Case_Sap_Batch</fullName>
        <active>true</active>
        <label>CN Case Sap Batch</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>